# MLOps

./: .dockerignore  .env.example  .gitignore  .ignore  Makefile  README.md  data_pipeline.py  dockerfile.mlflow  dvc.yaml  forecast.py  params.yaml  pyproject.toml
.dvc/: config
Lab0/: pyproject.toml
conf/: config.yaml
conf/pipeline/: iris.yaml  iris2.yaml
config/: conf.yaml
data/: raw.dvc
data/processed/: .gitignore
data/raw/: .gitignore
models/: best_model.joblib
models/fake/: .gitignore
notebooks/: try.ipynb
outputs/2026-04-24/22-02-09/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-24/22-02-41/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-28/17-51-39/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-28/17-56-48/.hydra/: hydra.yaml
outputs/2026-04-28/17-56-58/.hydra/: hydra.yaml
outputs/2026-04-28/18-04-07/.hydra/: hydra.yaml
src/: processing.py  train.py  utils.py
src/deployment/batch/: data_flow.py  data_models.py  forecast.py  prepare_daily_data.py
src/deployment/online/: requests.py
src/training/: evaluate.py  model_wrapper.py  process_data.py  train.py
